WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255652
[GTK] DrawingAreaCoordinatedGraphics.h:148:10: error: private field 'm_forceRepaintAfterBackingStoreStateUpdate' is not used [-Werror,-Wunused-private-field]
https://bugs.webkit.org/show_bug.cgi?id=255652
Summary
[GTK] DrawingAreaCoordinatedGraphics.h:148:10: error: private field 'm_forceR...
Michael Catanzaro
Reported
2023-04-19 06:14:39 PDT
After
263118@main
we have an unused private field and need to remove it: /home/mcatanzaro/Projects/WebKit/Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/DrawingAreaCoordinatedGraphics.h:148:10: error: private field 'm_forceRepaintAfterBackingStoreStateUpdate' is not used [-Werror,-Wunused-private-field] bool m_forceRepaintAfterBackingStoreStateUpdate { false }; ^ 1 error generated.
Attachments
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2023-04-19 06:21:47 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12908
EWS
Comment 2
2023-04-19 07:23:29 PDT
Committed
263131@main
(6e008ff162a9): <
https://commits.webkit.org/263131@main
> Reviewed commits have been landed. Closing PR #12908 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug