[GTK] DrawingAreaCoordinatedGraphics.h:148:10: error: private field 'm_forceRepaintAfterBackingStoreStateUpdate' is not used [-Werror,-Wunused-private-field] https://bugs.webkit.org/show_bug.cgi?id=255652

Unreviewed build fix.

* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/DrawingAreaCoordinatedGraphics.h:

Canonical link: https://commits.webkit.org/263131@main